# gonzo-funnel-public

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  QUESTIONS.md  README.md  cli.py  docker-compose.yml  errors.py  models.py  orchestrator.py  pyproject.toml  setup_airtable.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agents/: base.py  drafter.py  researcher.py  scorer.py  scout.py
docs/: architecture.md  cost_model.md  model_routing.md
llm/: anthropic_client.py  base.py  factory.py  openai_client.py  openrouter_client.py
notify/: email.py
observability/: cost.py  jsonl_logger.py  langfuse_wrapper.py
search/: base.py  brave.py  factory.py  serper.py  tavily.py
storage/: airtable.py  results_log.py  sqlite_cache.py
systemd/: gonzo-funnel.service  gonzo-funnel.timer
tests/: test_airtable_upsert.py  test_base_agent_retry.py  test_budget_ceiling.py  test_cli.py  test_drafter.py  test_email_digest.py  test_llm_factory.py  test_llm_openai.py  test_orchestrator.py  test_researcher.py  test_scorer.py  test_scout.py  test_search_factory.py  test_search_serper_tavily.py
