[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gonzo-funnel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyairtable>=2.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llm", "search", "agents", "storage", "notify", "observability"]
include = ["errors.py", "models.py", "cli.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
